err/suds-ceeme.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bindings'...
Compiling './lib/python3.5/site-packages/bindings/binding.py'...
***   File "./lib/python3.5/site-packages/bindings/binding.py", line 102
    raise Exception, 'not implemented'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mx'...
Compiling './lib/python3.5/site-packages/mx/__init__.py'...
***   File "./lib/python3.5/site-packages/mx/__init__.py", line 55
    raise AttributeError, \
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mx/literal.py'...
***   File "./lib/python3.5/site-packages/mx/literal.py", line 136
    raise Exception, \
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/sax'...
Compiling './lib/python3.5/site-packages/sax/date.py'...
***   File "./lib/python3.5/site-packages/sax/date.py", line 55
    raise ValueError, type(date)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/suds_ceeme-0.4.egg-info'...
Listing './lib/python3.5/site-packages/transport'...
Compiling './lib/python3.5/site-packages/transport/http.py'...
***   File "./lib/python3.5/site-packages/transport/http.py", line 63
    except u2.HTTPError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/umx'...
Compiling './lib/python3.5/site-packages/umx/__init__.py'...
***   File "./lib/python3.5/site-packages/umx/__init__.py", line 52
    raise AttributeError, \
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xsd'...
Compiling './lib/python3.5/site-packages/xsd/deplist.py'...
***   File "./lib/python3.5/site-packages/xsd/deplist.py", line 140
    print [x[0] for x in L.sort()]
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xsd/query.py'...
***   File "./lib/python3.5/site-packages/xsd/query.py", line 57
    raise Exception, 'not-implemented by subclass'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xsd/sxbasic.py'...
***   File "./lib/python3.5/site-packages/xsd/sxbasic.py", line 633
    raise Exception, '%s mismatch' % TNS
                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
